@@ -2,6 +2,7 @@ Revision history for Padre-Plugin-SVN
 
 0.05	To Be Released
 		* Changed the blame (log) display to show as a tree view.
+		* gettext-ified some messages (Zeno Gantner)
 
 0.04	2009.11.11
 		* Fixed up the handling of the commit message Dialog - You are now prompted when no commit message is provided.
